truncated user name if too long, updated avatar styling, show and article margin fix

--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -124,8 +124,12 @@
   }
 }
 
-.thumbnail {
+.avatar-thumbnail {
   height: 24px;
   width: 24px;
   object-fit: cover;
+}
+
+.avatar-name {
+  font-size: 0.85em;
 }
